Fixed Pagination out of bounds bug

--- a/src/components/UserList/Users.css
+++ b/src/components/UserList/Users.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -10,8 +10,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    margin: 30px;
+    flex-grow: 1;
+    margin: 20px;
     padding: 20px;
 }
 
